--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   ],
   "main": "n/a",
   "scripts": {
+    "heroku-postbuild": "gatsby build",
     "build": "gatsby build",
     "develop": "gatsby develop"
   }
