--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   "main": "n/a",
   "scripts": {
     "heroku-postbuild": "gatsby build",
-    "build": "gatsby build",
+    // "build": "gatsby build",
     "develop": "gatsby develop"
   }
 }
